--- a/views/smt/smtoutputpv.jade
+++ b/views/smt/smtoutputpv.jade
@@ -1,7 +1,7 @@
 html
   head
    meta(charset='utf-8')
-   title CHANGE OVER TIME
+   title SMT OUTPUT
    meta(name='viewport', content='width=device-width, initial-scale=1.0')
    meta(name='description', content='')
    meta(name='author', content='')
@@ -176,11 +176,11 @@ script.
     
     //alert (JSON.stringify(mps));
      $("#output").pivotUI(mps, {
-      cols: ["TimeDate", "TimeHour"],
-      rows: ["strStation", "strBoard"],
-      vals: ["ActualQty"],
+      cols: [ "TimeHour"],
+      rows: ["TimeDate","strBoard", "BoardTarget", "ActualQty"],
+      vals: ["Variant"],
       aggregatorName: "Integer Sum",
-      rendererName: "Heatmap"
+      rendererName: "Table"
      });
     });
    }
