--- a/views/main.jade
+++ b/views/main.jade
@@ -17,7 +17,7 @@ html(lang='en')
       padding: 9px 0;
       }
     link(href='/css/bootstrap-responsive.css', rel='stylesheet')
-    //link(href='/css/jumbotron.css', rel='stylesheet')
+    //- link(href='/css/jumbotron.css', rel='stylesheet')
     link(rel='apple-touch-icon-precomposed', sizes='144x144', href='/ico/apple-touch-icon-144-precomposed.png')
     link(rel='apple-touch-icon-precomposed', sizes='114x114', href='/ico/apple-touch-icon-114-precomposed.png')
     link(rel='apple-touch-icon-precomposed', sizes='72x72', href='/ico/apple-touch-icon-72-precomposed.png')
@@ -47,8 +47,8 @@ html(lang='en')
     //- link(rel='stylesheet', type='text/css', href='css1/responsive.css')
     //- link(rel='stylesheet', type='text/css', href='css1/color/green.css') 
     
-  body
-   .navbar.navbar-inverse.navbar-fixed-top
+body
+  .navbar.navbar-inverse.navbar-fixed-top
       .navbar-inner
         .container-fluid
           a.btn.btn-navbar(data-toggle='collapse', data-target='.nav-collapse')
@@ -69,9 +69,9 @@ html(lang='en')
                 a(href='lineshow') REPORT
               
 
-.container-fluid
-      
-        .span12
+  .container-fluid
+    .row-fluid
+         .span12
           .hero-unit
             h1 MONITORING SYSTEM
           .row-fluid
@@ -127,7 +127,7 @@ html(lang='en')
                   li
                     a(href="smtmonitor") SMT Target Monitoring
                     | : Show target vs actual for 4 week data
-           .row-fluid
+      .row-fluid
                .span4
                 h2 POST ASSY
                 p
@@ -135,10 +135,12 @@ html(lang='en')
                   li
                     a(href="pamonitor") PostAssy Tracking
                     | : Report Daily Output and Detail Tracing Serial
+     .row-fluid
          .span12
            .hero-unit
              h1 ENGINEERING 
-           .span4
+     .row-fluid
+         .span4
                h2 DOCUMENT
                :markdown
                 - [QuickDocument](/pdfview)
@@ -152,9 +154,11 @@ html(lang='en')
                  |Password default: 123
                  li
                   a(href="repair", target="_blank") Nhập Data Web
-                  |: Nhập liệu trên WebApp   
+                  |: Nhập liệu trên WebApp 
+        
+      .row-fluid
           .span12
-            .hero-unitbit
+            .hero-unit
               h1 WAREHOUSE PROCESS
             .span4
                 h2 PICK AND PACK 
