--- a/views/vuejs.jade
+++ b/views/vuejs.jade
@@ -42,7 +42,15 @@ html
         }
       })
  
-
+body
+  #md
+  :markdown
+   HERE TEST MARKDOWN
+   ===
+   PAGE1
+   ---
+   ### INSTRUCTION
+   [LINK FOR SEARCH](WWW.GOOGLE.COM)
      
 
 
