change url to relative path :)

--- a/views/smt/smtoutputpv.jade
+++ b/views/smt/smtoutputpv.jade
@@ -170,7 +170,7 @@ script.
   let server = $("#server").val();
   let query = $("#query").val();
   //alert (server);
-  let  url =`http://vnmacsrpt2:5000/sql/smta/exec [SiplaceOIS]..HourlyOutputMonitoring`;
+  let  url =`sql/smta/exec [SiplaceOIS]..HourlyOutputMonitoring`;
    //alert (url);
     $.getJSON(url, function (mps) {
     
