change relative to absolute by roots folder

--- a/views/360.jade
+++ b/views/360.jade
@@ -28,7 +28,7 @@ script(src='http://photo-sphere-viewer.js.org/dist/doT/doT.min.js')
 script(src='http://photo-sphere-viewer.js.org/dist/uevent/uevent.min.js')
 script(src='http://photo-sphere-viewer.js.org/dist/three.js-examples/examples/js/renderers/CanvasRenderer.js')
 script(src='http://photo-sphere-viewer.js.org/dist/three.js-examples/examples/js/renderers/Projector.js')
-script(src='js/photo-sphere-viewer.min.js')
+script(src='/js/photo-sphere-viewer.min.js')
 
 // text used for the marker description
 script#pin-content(type='text/template').
