--- a/views/app/lineshow.jade
+++ b/views/app/lineshow.jade
@@ -15,8 +15,8 @@ head
     .sidebar-nav {
     padding: 9px 0;
     }
-  script(type='text/javascript', src='js/jquery.min.js')
-  script(type="text/javascript", src="js/etl.js")
+  script(type='text/javascript', src='/js/jquery.min.js')
+  script(type="text/javascript", src="/js/etl.js")
 //.body
 body(onload=`buildHtmlTable('#excelDataTable')`)
  //top menu
