--- a/views/app/pamonitor.jade
+++ b/views/app/pamonitor.jade
@@ -6,9 +6,9 @@ html
     title DataTables example - Zero configuration
     link(rel='shortcut icon', type='image/png', href='/media/images/favicon.png')
     //link(rel='alternate', type='application/rss+xml', title='RSS 2.0', href='http://www.datatables.net/rss.xml')
-    link(href='css/bootstrap.css', rel='stylesheet')
+    link(href='/css/bootstrap.css', rel='stylesheet')
     //link(rel='stylesheet', type='text/css', href='https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css')//ok
-    link(rel='stylesheet', type='text/css', href='css/jquery.dataTables.min.css')
+    link(rel='stylesheet', type='text/css', href='/css/jquery.dataTables.min.css')
     style(type='text/css')
       body {
       padding-top: 40px;
@@ -17,35 +17,35 @@ html
       .sidebar-nav {
       padding: 9px 0;
       }
-    script(type='text/javascript', language='javascript', src='js/jquery-1.12.4.min.js')
+    script(type='text/javascript', language='javascript', src='/js/jquery-1.12.4.min.js')
     //script(type='text/javascript', language='javascript', src='//code.jquery.com/jquery-1.12.4.js')//ok
     //script(type='text/javascript', language='javascript', src='https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js')//OK
-    script(type='text/javascript', language='javascript', src='js/jquery.dataTables.js')
-    //script(type='text/javascript', language='javascript', src='js/jquery.dataTables.min.js')
+    script(type='text/javascript', language='javascript', src='/js/jquery.dataTables.js')
+    //script(type='text/javascript', language='javascript', src='/js/jquery.dataTables.min.js')
     //script(type="text/javascript", src="http://d3js.org/d3.v3.min.js") //ok
-    script(type="text/javascript", src="js/d3.v4.min.js") 
+    script(type="text/javascript", src="/js/d3.v4.min.js") 
     
-    link(rel='stylesheet', type='text/css', media='screen', href='css/bootstrap.min.css')
-    link(rel='stylesheet', href='css/font-awesome.min.css')
-    link(href='css/prettify-1.0.css', rel='stylesheet')
-    link(href='css/base.css', rel='stylesheet')
-    link(href='css/bootstrap-datetimepicker.css', rel='stylesheet')
-    script(type="text/javascript", src="js/moment-with-locales.js")
-    script(type="text/javascript", src="js/bootstrap-datetimepicker.js")
+    link(rel='stylesheet', type='text/css', media='screen', href='/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/font-awesome.min.css')
+    link(href='/css/prettify-1.0.css', rel='stylesheet')
+    link(href='/css/base.css', rel='stylesheet')
+    link(href='/css/bootstrap-datetimepicker.css', rel='stylesheet')
+    script(type="text/javascript", src="/js/moment-with-locales.js")
+    script(type="text/javascript", src="/js/bootstrap-datetimepicker.js")
     
     
     //- //DO FOR BUTTON Download
-    //- script(type="text/javascript", src="js/dataTables.buttons.min.js") 
-    //- script(type="text/javascript", src="js/jszip.min.js") 
-    //- script(type="text/javascript", src="js/pdfmake.min.js") 
-    //- script(type="text/javascript", src="js/vfs_fonts.js") 
-    //- script(type="text/javascript", src="js/buttons.html5.min.js") 
+    //- script(type="text/javascript", src="/js/dataTables.buttons.min.js") 
+    //- script(type="text/javascript", src="/js/jszip.min.js") 
+    //- script(type="text/javascript", src="/js/pdfmake.min.js") 
+    //- script(type="text/javascript", src="/js/vfs_fonts.js") 
+    //- script(type="text/javascript", src="/js/buttons.html5.min.js") 
     //DO RESIZE W
-    script(type="text/javascript", src="js/dataTables.pageResize.min.js") 
+    script(type="text/javascript", src="/js/dataTables.pageResize.min.js") 
     
     
      
-    script(type='text/javascript', language='javascript', src='js/url2id.js')
+    script(type='text/javascript', language='javascript', src='/js/url2id.js')
     //- script.init(type='text/javascript').
     script.
       $(document).ready(function() {
