--- a/views/main.jade
+++ b/views/main.jade
@@ -32,8 +32,8 @@ html(lang='en')
     //-    [ PLUGIN STYLESHEET ]
     //-    =========================================================================================================================
     //- link(rel='shortcut icon', type='image/x-icon', href='images/icon.png')
-    //- link(rel='stylesheet', type='text/css', href='css1/animate.css')
-    //- link(rel='stylesheet', type='text/css', href='css1/magnific-popup.css')
+    //- link(rel='stylesheet', type='text/css', href='/css1/animate.css')
+    //- link(rel='stylesheet', type='text/css', href='/css1/magnific-popup.css')
     //- link(rel='stylesheet', type='text/css', href='library/vegas/vegas.min.css')
     //-  //
     //-    [ Boot STYLESHEET ]
@@ -43,9 +43,9 @@ html(lang='en')
     //-  //
     //-    [ DEFAULT STYLESHEET ]
     //-    =========================================================================================================================
-    //- link(rel='stylesheet', type='text/css', href='css1/style.css')
-    //- link(rel='stylesheet', type='text/css', href='css1/responsive.css')
-    //- link(rel='stylesheet', type='text/css', href='css1/color/green.css') 
+    //- link(rel='stylesheet', type='text/css', href='/css1/style.css')
+    //- link(rel='stylesheet', type='text/css', href='/css1/responsive.css')
+    //- link(rel='stylesheet', type='text/css', href='/css1/color/green.css') 
     
 body
   .navbar.navbar-inverse.navbar-fixed-top
