--- a/views/sample.jade
+++ b/views/sample.jade
@@ -6,10 +6,10 @@ html
  body
   h1 Test function
   input(type="text", placeholder ="nhap thong tin")
-  script(type="text/javascript", src="js/script.js")
+  script(type="text/javascript", src="/js/script.js")
   
   script.
-  //alert (data.name);
+    alert (data.name);
    alert(url);
    var newserial = logSerial();
    newserial.setInfo(1,2,3,4);
