--- a/views/app/lineinput.jade
+++ b/views/app/lineinput.jade
@@ -22,7 +22,7 @@ html(lang='en')
     link(rel='apple-touch-icon-precomposed', href='/ico/apple-touch-icon-57-precomposed.png')
     link(rel='shortcut icon', href='/ico/favicon.png')
     
-    script(type='text/javascript', charset='utf8', src='js/jquery-1.12.4.min.js')
+    script(type='text/javascript', charset='utf8', src='/js/jquery-1.12.4.min.js')
 body
 //top menu
 .navbar.navbar-inverse.navbar-fixed-top
