--- a/views/app/repair.jade
+++ b/views/app/repair.jade
@@ -6,10 +6,10 @@ html
     title DataTables example - Zero configuration
     link(rel='shortcut icon', type='image/png', href='/media/images/favicon.png')
     //link(rel='alternate', type='application/rss+xml', title='RSS 2.0', href='http://www.datatables.net/rss.xml')
-    link(href='css/bootstrap.css', rel='stylesheet')
+    link(href='/css/bootstrap.css', rel='stylesheet')
     
     //link(rel='stylesheet', type='text/css', href='https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css')//ok
-    link(rel='stylesheet', type='text/css', href='css/jquery.dataTables.min.css')
+    link(rel='stylesheet', type='text/css', href='/css/jquery.dataTables.min.css')
     style(type='text/css')
      body {
      padding-top: 60px;
@@ -18,23 +18,23 @@ html
      .sidebar-nav {
      padding: 9px 0;
      }
-    script(type='text/javascript', language='javascript', src='js/jquery-1.12.4.min.js')
+    script(type='text/javascript', language='javascript', src='/js/jquery-1.12.4.min.js')
     //script(type='text/javascript', language='javascript', src='//code.jquery.com/jquery-1.12.4.js')//ok
     //script(type='text/javascript', language='javascript', src='https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js')//OK
-    script(type='text/javascript', language='javascript', src='js/jquery.dataTables.js')
-    //script(type='text/javascript', language='javascript', src='js/jquery.dataTables.min.js')
+    script(type='text/javascript', language='javascript', src='/js/jquery.dataTables.js')
+    //script(type='text/javascript', language='javascript', src='/js/jquery.dataTables.min.js')
     //script(type="text/javascript", src="http://d3js.org/d3.v3.min.js") //ok
-    script(type="text/javascript", src="js/d3.v4.min.js") 
+    script(type="text/javascript", src="/js/d3.v4.min.js") 
 
-    script(type="text/javascript", src="js/dataTables.pageResize.min.js") 
+    script(type="text/javascript", src="/js/dataTables.pageResize.min.js") 
     
-    link(href='css/select2.min.css', rel='stylesheet')
-    script(src='js/select2.min.js')
+    link(href='/css/select2.min.css', rel='stylesheet')
+    script(src='/js/select2.min.js')
 
 
 
      
-    script(type='text/javascript', language='javascript', src='js/url2id.js')
+    script(type='text/javascript', language='javascript', src='/js/url2id.js')
     //- script.init(type='text/javascript').
     script.
       $(document).ready(function () {
