--- a/views/app/show.jade
+++ b/views/app/show.jade
@@ -16,19 +16,19 @@ html
      }
     //
       <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.min.js"></script>
-  script(type='text/javascript', charset='utf8', src='js/jquery-1.12.4.min.js')
+  script(type='text/javascript', charset='utf8', src='/js/jquery-1.12.4.min.js')
   // Datatables
-  script(type='text/javascript', charset='utf8', src='js/jquery.dataTables.js')
-  script(type='text/javascript', src='js/dataTables.buttons.min.js')
-  script(type='text/javascript', src='js/buttons.flash.min.js')
-  script(type='text/javascript', src='js/jszip.min.js')
-  script(type='text/javascript', src='js/pdfmake.min.js')
-  script(type='text/javascript', src='js/vfs_fonts.js')
-  script(type='text/javascript', src='js/buttons.html5.min.js')
-  script(type='text/javascript', src='js/buttons.print.min.js')
+  script(type='text/javascript', charset='utf8', src='/js/jquery.dataTables.js')
+  script(type='text/javascript', src='/js/dataTables.buttons.min.js')
+  script(type='text/javascript', src='/js/buttons.flash.min.js')
+  script(type='text/javascript', src='/js/jszip.min.js')
+  script(type='text/javascript', src='/js/pdfmake.min.js')
+  script(type='text/javascript', src='/js/vfs_fonts.js')
+  script(type='text/javascript', src='/js/buttons.html5.min.js')
+  script(type='text/javascript', src='/js/buttons.print.min.js')
   // external libs from cdnjs
-  script(type='text/javascript', src='js/jquery.min.js')
-  script(type='text/javascript', src='js/jquery-ui.min.js')
+  script(type='text/javascript', src='/js/jquery.min.js')
+  script(type='text/javascript', src='/js/jquery-ui.min.js')
   // PivotTable.js libs from cdnjs
   script(type='text/javascript', src='/js/pivot.min.js')
   link(rel='stylesheet', type='text/css', href='/css/pivot.min.css')
@@ -37,29 +37,29 @@ html
     <link rel="stylesheet" type="text/css" href="http://nicolas.kruchten.com/pivottable/dist/pivot.css">
     <script type="text/javascript" src="http://nicolas.kruchten.com/pivottable/dist/pivot.js"></script>
   // subtotal.js libs from ../dist
-  script(type='text/javascript', src='js/subtotal.js')
-  link(rel='stylesheet', type='text/css', href='css/subtotal.css')
+  script(type='text/javascript', src='/js/subtotal.js')
+  link(rel='stylesheet', type='text/css', href='/css/subtotal.css')
   // optional: mobile support with jqueryui-touch-punch
-  script(type='text/javascript', src='js/jquery.ui.touch-punch.min.js')
+  script(type='text/javascript', src='/js/jquery.ui.touch-punch.min.js')
   // DynaTable
-  script(type='text/javascript', src='js/highcharts.js')
+  script(type='text/javascript', src='/js/highcharts.js')
   //
   
-  script(type='text/javascript', src='js/jquery.dynatable.js')
+  script(type='text/javascript', src='/js/jquery.dynatable.js')
   // Khang Scripts
-  script(src='js/d3-collection.v1.min.js')
-  script(src='js/d3-dispatch.v1.min.js')
-  script(src='js/d3-dsv.v1.min.js')
-  script(src='js/d3-request.v1.min.js')
+  script(src='/js/d3-collection.v1.min.js')
+  script(src='/js/d3-dispatch.v1.min.js')
+  script(src='/js/d3-dsv.v1.min.js')
+  script(src='/js/d3-request.v1.min.js')
   script(src='/js/d3.v4.min.js', charset='utf8')
   // external libs from cdnjs
-  link(rel='stylesheet', type='text/css', href='css/c3.min.css')
-  script(type='text/javascript', src='js/papaparse.min.js')
-  script(type='text/javascript', src='js/d3.min.js')
-  script(type='text/javascript', src='js/c3.min.js')
+  link(rel='stylesheet', type='text/css', href='/css/c3.min.css')
+  script(type='text/javascript', src='/js/papaparse.min.js')
+  script(type='text/javascript', src='/js/d3.min.js')
+  script(type='text/javascript', src='/js/c3.min.js')
   // PivotTable.js libs from ../dist
-  script(type='text/javascript', src='js/c3_renderers.js')
-  script(type='text/javascript', src='js/export_renderers.js')
+  script(type='text/javascript', src='/js/c3_renderers.js')
+  script(type='text/javascript', src='/js/export_renderers.js')
   style.
     body {
     font-family: Verdana;
@@ -109,8 +109,8 @@ body
                   li
                     a(href='lineshow') LINE
  //top menu
-script(type='text/javascript', charset='utf8', src='js/dlscript.js')
-//script(type='text/javascript', charset='utf8', src='js/dlconfig.js')
+script(type='text/javascript', charset='utf8', src='/js/dlscript.js')
+//script(type='text/javascript', charset='utf8', src='/js/dlconfig.js')
 h3
   //| HOURLY OUTPUT
 select#ddlViewBy(onmousedown="this.value='';", onchange='jsFunction(this.value);')
