--- a/views/cms/pdfview.jade
+++ b/views/cms/pdfview.jade
@@ -6,7 +6,7 @@ html
     title PDF viewport
     link(rel='shortcut icon', type='image/png', href='/media/images/favicon.png')
     //link(rel='alternate', type='application/rss+xml', title='RSS 2.0', href='http://www.datatables.net/rss.xml')
-    link(href='css/bootstrap.min.css', rel='stylesheet')
+    link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/bootstrap-responsive.css', rel='stylesheet')
     //link(href='/css/jumbotron.css', rel='stylesheet')
     style(type='text/css')
@@ -14,24 +14,24 @@ html
       border:1px solid black;
        }
     //link(rel='stylesheet', type='text/css', href='https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css')//ok
-    link(rel='stylesheet', type='text/css', href='css/jquery.dataTables.min.css')
+    link(rel='stylesheet', type='text/css', href='/css/jquery.dataTables.min.css')
     
-    script(type='text/javascript', language='javascript', src='js/jquery-1.12.4.min.js')
+    script(type='text/javascript', language='javascript', src='/js/jquery-1.12.4.min.js')
     //script(type='text/javascript', language='javascript', src='//code.jquery.com/jquery-1.12.4.js')//ok
     //script(type='text/javascript', language='javascript', src='https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js')//OK
-    script(type='text/javascript', language='javascript', src='js/jquery.dataTables.js')
-    //script(type='text/javascript', language='javascript', src='js/jquery.dataTables.min.js')
+    script(type='text/javascript', language='javascript', src='/js/jquery.dataTables.js')
+    //script(type='text/javascript', language='javascript', src='/js/jquery.dataTables.min.js')
     //script(type="text/javascript", src="http://d3js.org/d3.v3.min.js") //ok
-    script(type="text/javascript", src="js/d3.v4.min.js") 
+    script(type="text/javascript", src="/js/d3.v4.min.js") 
 
-    //script(type="text/javascript", src="js/dataTables.pageResize.min.js") 
+    //script(type="text/javascript", src="/js/dataTables.pageResize.min.js") 
     
     
      
-    //script(type='text/javascript', language='javascript', src='js/url2id.js')
+    //script(type='text/javascript', language='javascript', src='/js/url2id.js')
     //- script.init(type='text/javascript').
     //script(src='//mozilla.github.io/pdf.js/build/pdf.js')
-    script(type="text/javascript",src='js/pdf.js')
+    script(type="text/javascript",src='/js/pdf.js')
          
    
   body.wide.comments.example
