--- a/views/main3.jade
+++ b/views/main3.jade
@@ -12,7 +12,7 @@ head
   link(href='vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
   link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic', rel='stylesheet', type='text/css')
   // Custom CSS
-  link(href='css/stylish-portfolio.css', rel='stylesheet')
+  link(href='/css/stylish-portfolio.css', rel='stylesheet')
 // Navigation
 a#menu-toggle.btn.btn-dark.btn-lg.toggle(href='#')
   i.fa.fa-bars
@@ -179,4 +179,4 @@ script(src='vendor/bootstrap/js/bootstrap.min.js')
 // Plugin JavaScript
 script(src='vendor/jquery-easing/jquery.easing.min.js')
 // Custom scripts for this template
-script(src='js/stylish-portfolio.js')
+script(src='/js/stylish-portfolio.js')
