--- a/views/sample--.jade
+++ b/views/sample--.jade
@@ -1,7 +1,7 @@
 html
   head
-    link(href='css/bootstrap.min.css', rel='stylesheet')
-    link(rel='stylesheet', href='css/bootstrap-select.min.css')
+    link(href='/css/bootstrap.min.css', rel='stylesheet')
+    link(rel='stylesheet', href='/css/bootstrap-select.min.css')
   .container
     .row
       h2 Bootstrap-select example
