--- a/views/template/SMTBoard.jade
+++ b/views/template/SMTBoard.jade
@@ -18,14 +18,14 @@ head
     padding: 9px 0;
     }
   //script(type='text/javascript', charset='utf8', src='https://code.jquery.com/jquery-1.12.4.js')
-  script(type='text/javascript', charset='utf8', src='js/jquery.js')
+  script(type='text/javascript', charset='utf8', src='/js/jquery.js')
   // Datatables
   //script(type='text/javascript', charset='utf8', src='https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js')
-  //script(type='text/javascript', src='js/jquery.min.js')
+  //script(type='text/javascript', src='/js/jquery.min.js')
   script(type='text/javascript', charset='utf8', src='https://code.jquery.com/jquery-1.12.4.js')
   script(src='https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js')
   //script(src='/js/jquery.dataTables.js')
-  //script(type="text/javascript", src="js/etl.js")
+  //script(type="text/javascript", src="/js/etl.js")
 //.body
 body(onload=`buildHtmlTable('#excelDataTable')`)
  
