--- a/views/template/template.jade
+++ b/views/template/template.jade
@@ -18,10 +18,10 @@ head
     padding: 9px 0;
     }
   //script(type='text/javascript', charset='utf8', src='https://code.jquery.com/jquery-1.12.4.js')
-  script(type='text/javascript', charset='utf8', src='js/jquery.js')
+  script(type='text/javascript', charset='utf8', src='/js/jquery.js')
   // Datatables
   //script(type='text/javascript', charset='utf8', src='https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js')
-  //script(type='text/javascript', src='js/jquery.min.js')
+  //script(type='text/javascript', src='/js/jquery.min.js')
   script(type='text/javascript', charset='utf8', src='https://code.jquery.com/jquery-1.12.4.js')
   script(src='https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js')
   //script(src='/js/jquery.dataTables.js')
