some main update serverjs+ 360 sample

--- a/views/app/show.jade
+++ b/views/app/show.jade
@@ -110,7 +110,7 @@ body
                     a(href='lineshow') LINE
  //top menu
 script(type='text/javascript', charset='utf8', src='/js/dlscript.js')
-//script(type='text/javascript', charset='utf8', src='/js/dlconfig.js')
+//- //script(type='text/javascript', charset='utf8', src='/js/dlconfig.js')
 h3
   //| HOURLY OUTPUT
 select#ddlViewBy(onmousedown="this.value='';", onchange='jsFunction(this.value);')
