--- a/views/main.jade
+++ b/views/main.jade
@@ -23,7 +23,7 @@ html(lang='en')
     link(rel='apple-touch-icon-precomposed', sizes='72x72', href='/ico/apple-touch-icon-72-precomposed.png')
     link(rel='apple-touch-icon-precomposed', href='/ico/apple-touch-icon-57-precomposed.png')
     link(rel='shortcut icon', href='/ico/favicon.png')
-    
+    script(type="text/javascript", src="http://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.js")  
      //
        [ FONT-AWESOME ICON ]
        =========================================================================================================================
