wow2 woking fine and full screeen

--- a/views/test/test.jade
+++ b/views/test/test.jade
@@ -49,5 +49,7 @@ body
           img(src='http://wowslider.com/sliders/demo-79/data1/tooltips/flowers19830_1280.jpg', alt='Flower and Butterfly')
     .ws_shadow
   script(type='text/javascript', src='/js/wowslider.js')
-  script(type='text/javascript', src='/js/script_wow.js')
+  script(type='text/javascript', src='/js/a.js')
+  //- script(type='text/javascript', src='/js/script_wow.js')
+
   // End WOWSlider.com BODY section
