dashboard, pick, node-red

--- a/views/test/wow2.jade
+++ b/views/test/wow2.jade
@@ -13,28 +13,17 @@ head
 	.ws_images
 		ul
 			li
-				img#wows1_0(src='/data1/images/a_new_day_has_come.jpg', alt='a_new_day_has_come', title='a_new_day_has_come')
+				img#wows1_0(src='/data1/images/a_new_day_has_come.jpg',  title='1a_new_day_has_come 0000000')
 			li
-				img#wows1_1(src='http://wowslider.com/sliders/demo-31/data1/images/autumn1072827.jpg', alt='Paris-1920x1200-007', title='Paris-1920x1200-007')
+				img#wows1_5(src='/data1/images/a_new_day_has_come.jpg',title='2a_new_day_has_come')
 			li
-				img#wows1_2(src='/data1/images/pariseiffeltowerautumn2560x1600.jpg', alt='paris-eiffel-tower-autumn-2560x1600', title='paris-eiffel-tower-autumn-2560x1600')
+				img#wows1_1(src='/data1/images/paris1920x1200007.jpg', title='3Paris-1920x1200-007')
 			li
-				img#wows1_3(src='data1/images/pariseiffeltowerdesktopwallpaper.jpg', alt='html5 slider', title='paris-eiffel-tower-desktop-wallpaper')
+				img#wows1_2(src='/data1/images/pariseiffeltowerautumn2560x1600.jpg', title='4paris-eiffel-tower-autumn-2560x1600')
 			li
-				img#wows1_4(src='/data1/images/pariswallpaper.jpg', alt='paris-wallpaper', title='paris-wallpaper')
-          
-	.ws_bullets
-		div
-			a(href='#', title='a_new_day_has_come')
-				span 1
-			a(href='#', title='Paris-1920x1200-007')
-				span 2
-			a(href='#', title='paris-eiffel-tower-autumn-2560x1600')
-				span 3
-			a(href='#', title='paris-eiffel-tower-desktop-wallpaper')
-				span 4
-			a(href='#', title='paris-wallpaper')
-				span 5
+				img#wows1_3(src='data1/images/pariseiffeltowerdesktopwallpaper.jpg',  title='5paris-eiffel-tower-desktop-wallpaper')
+			li
+				img#wows1_4(src='/data1/images/pariswallpaper.jpg',  title='6paris-wallpaper')
 	.ws_script(style='position:absolute;left:-99%')
 		a(href='http://wowslider.net') css image gallery
 	.ws_shadow
