--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -169,7 +169,7 @@ footer
             a(href='#')
               i.fa.fa-dribbble.fa-fw.fa-3x
         hr.small
-        p.text-muted Copyright &copy; Your Website 2017
+        p.text-muted Copyright &copy; Datalogic 2017
   a#to-top.btn.btn-dark.btn-lg.js-scroll-trigger(href='#top')
     i.fa.fa-chevron-up.fa-fw.fa-1x
 // Bootstrap core JavaScript
