--- a/views/pms/dashboard.jade
+++ b/views/pms/dashboard.jade
@@ -150,7 +150,7 @@ script(type='text/javascript').
     data =[{"rn":"1","po_number":"101025242   ","model":"740158900                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":13,"shiftname":"Shift1","cnt":20},{"rn":"2","po_number":"101025242   ","model":"740158900                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":12,"shiftname":"Shift1","cnt":20},{"rn":"3","po_number":"101025242   ","model":"740158900                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":11,"shiftname":"Shift1","cnt":20},{"rn":"4","po_number":"101025242   ","model":"740158900                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":10,"shiftname":"Shift1","cnt":10},{"rn":"5","po_number":"101025242   ","model":"740158900                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":9,"shiftname":"Shift1","cnt":17},{"rn":"6","po_number":"101025869   ","model":"740159200                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":9,"shiftname":"Shift1","cnt":2},{"rn":"7","po_number":"101025869   ","model":"740159200                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":8,"shiftname":"Shift1","cnt":21},{"rn":"8","po_number":"101025869   ","model":"740159200                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":7,"shiftname":"Shift1","cnt":17},{"rn":"9","po_number":"101025869   ","model":"740159200                     ","line":"FX01                ","event_date":"2017-10-28T00:00:00.000Z","event_hour":6,"shiftname":"Shift1","cnt":10}];
     let url =`/sql/vnmsrv601/
             exec Finalassy.dbo.sp001_RealtimeReport`
-    data = fetchJSONFile( url);
+    //data = fetchJSONFile( url);
     //- alert(JSON.stringify(data));
     data.forEach(function(d){
     var tempDate = new Date(d.event_date);
@@ -158,7 +158,7 @@ script(type='text/javascript').
     })
     var facts = crossfilter(data);
     var all = facts.groupAll();
-    var ndGroup = all.reduceSum(function(d){ return d.po_number; });
+    var ndGroup = all.reduceSum(function(d){ return d.qty; });
     //table
     var dateDimension = facts.dimension(function(d){ return d.event_date; });
     //line chart
