--- a/views/cms/pdfview.jade
+++ b/views/cms/pdfview.jade
@@ -78,9 +78,9 @@ html
        $(document).ready(function() {
             refresh();
            //- pullissue();
-           //let urlgo= `pdf/MS-0008-05-0004V-662353019-Post Assy_Rev B.pdf`;
-           //- let urlgo= `http://vnmacsrpt2:5001/General/MS-0090-09-0006V-Thu%20tuc%20MRB-xem%20xet%20va%20xu%20ly%20linh%20kien%20khong%20dat%20quy%20cach%20tu%20Incoming%20va%20Prod%20Line_Rev%20D.pdf`;
-           //- doLoadPDF(urlgo);
+          //-  //let urlgo= `pdf/MS-0008-05-0004V-662353019-Post Assy_Rev B.pdf`;
+          let urlgo= `pdf/MS-0008-05-0004V-662353019-Post Assy_Rev B.pdf`;
+          doLoadPDF(urlgo);
        } );
        
        
